--- a/CProgChap3Assignment22/CProgChap3Assignment2/CProgChap3Assignment2.vcxproj.filters
+++ b/CProgChap3Assignment22/CProgChap3Assignment2/CProgChap3Assignment2.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="2.3 two_func.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="platinum.cpp">
+    <ClCompile Include="assignment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
