--- a/CProgChap3Assignment22/CProgChap3Assignment2/CProgChap3Assignment2.vcxproj
+++ b/CProgChap3Assignment22/CProgChap3Assignment2/CProgChap3Assignment2.vcxproj
@@ -114,7 +114,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="platinum.cpp" />
+    <ClCompile Include="assignment.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
